# lib_dzne_manifesto

./: README.md  README.rst  pyproject.toml
src/lib_dzne_manifesto/: __init__.py  __main__.py
src/lib_dzne_manifesto/manifesto/: Prog.py  __init__.py  chain.py  elemkey.py  masterfile.py  slim.py
