[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib-dzne-manifesto" # The package-name for "pip install package-name"
version = "0.1.0"
description = "Libary for the manifesto. "
license = { file = "LICENSE" }
authors = [{ name = "Johannes Horler", email = "johannes.horler@dzne.de" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
]
requires-python = ">=3.11"

