[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib_dzne_manifesto"
version = "0.2.1"
description = "lib_dzne_manifesto"
readme = "README.rst"
authors = [
    { name = "Johannes", email = "johannes-programming@posteo.org" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "na_quantors>=1.0",
]
requires-python = ">=3.11"

[project.urls]
Download = "https://pypi.org/project/lib-dzne-manifesto/#files"
Source = "https://github.com/johannes-programming/lib_dzne_manifesto"
